--- a/index.html
+++ b/index.html
@@ -52,14 +52,12 @@ BODY {
 <div id="primarycontent">
 <center><h1><strong>Xiefan Guo</strong></h1></center>
 
-
 <br/>
+<br/><br/>
 
 
 <h2><strong>Publications</strong></h2>
 <!-- <div style="border:1px solid #CCC"></div> -->
-
-
 
 <table border="0" cellspacing="6" cellpadding="6" font-size: 15px>
   <tr>
@@ -93,7 +91,17 @@ BODY {
   </tr> 
 </table>
 
+<h2><strong>Professional activities</strong></h2>
+<!-- <div style="border:1px solid #CCC"></div> -->
 
+<table border="0" cellspacing="6" cellpadding="6" font-size: 15px>
+  <tr>
+    <td>
+    <div class="reviewer"><strong>Conference Reviewer:</strong> CVPR 2023, ECCV 2022, ACM MM 2022, BMVC 2021<br/>
+      <strong>Journal Reviewer:</strong> IEEE-TCSVT, IEEE-TMM</div>
+    </td>
+  </tr>  
+</table>
 
 <br><br><br>
 
