--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ BODY {
 
 <table border="0" cellspacing="6" cellpadding="6" font-size: 15px>
   <tr>
-    <td width="180" align="right"><img width="180" src="assets/paper/abpn_cvpr_2022/teaser.png" border="10"></td>
+    <td width="180" align="right"><img width="180" src="assets/paper/abpn_cvpr_2022/teaser.png" border="0"></td>
     <td>
     <div class="title"><strong>ABPN: Adaptive Blend Pyramid Network for Real-Time Local Retouching of Ultra High-Resolution Photo</strong></div>
     <div class="authors">
@@ -76,7 +76,7 @@ BODY {
   </tr> 
 
   <tr>
-    <td width="180" align="right"><img width="180" src="assets/paper/ctsdg_iccv_2021/teaser.png" border="10"></td>
+    <td width="180" align="right"><img width="180" src="assets/paper/ctsdg_iccv_2021/teaser.png" border="0"></td>
     <td>
     <div class="title"><strong>Image Inpainting via Conditional Texture and Structure Dual Generation</strong></div>
     <div class="authors">
@@ -85,7 +85,9 @@ BODY {
     <div>
         <span class="venue"> <a href="https://iccv2021.thecvf.com/">ICCV 2021</a> </span> |
         <span class="tag"> <a href="https://arxiv.org/abs/2108.09760">Paper</a> </span> |
-        <span class="tag"> <a href="https://github.com/Xiefan-Guo/CTSDG">Code</a> </span>
+        <span class="tag"> <a href="https://github.com/Xiefan-Guo/CTSDG">Code</a> </span> |
+        <span class="tag"> <a href="https://drive.google.com/file/d/1HLPMJQHWC1Ac4GHnnXaRdh6ZGadjwAcL/view">Slide</a> </span> |
+        <span class="tag"> <a href="https://drive.google.com/file/d/1WN0jqh5zkc-_tiXKYx1kMI2OZPWIVx8s/view">Poster</a> </span>
     </div>
     </td>
   </tr> 
