--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ BODY {
 <body>
 
 <div id="primarycontent">
-<center><h1><strong>Xiefan Guo</strong></h1></center>
+<!-- <center><h1><strong>Xiefan Guo</strong></h1></center> -->
 
 <br/>
 <br/><br/>
@@ -59,7 +59,7 @@ BODY {
 <h2><strong>Publications</strong></h2>
 <!-- <div style="border:1px solid #CCC"></div> -->
 
-<table border="0" cellspacing="6" cellpadding="6" font-size: 15px>
+<table border="0" cellspacing="8" cellpadding="8" font-size: 15px>
   <tr>
     <td width="180" align="right"><img width="180" src="assets/paper/abpn_cvpr_2022/teaser.png" border="0"></td>
     <td>
@@ -96,7 +96,7 @@ BODY {
 <h2><strong>Professional activities</strong></h2>
 <!-- <div style="border:1px solid #CCC"></div> -->
 
-<table border="0" cellspacing="6" cellpadding="6" font-size: 15px>
+<table border="0" cellspacing="8" cellpadding="8" font-size: 15px>
   <tr>
     <td>
     <div class="reviewer"><strong>Conference Reviewer:</strong> CVPR 2023, ECCV 2022, ACM MM 2022, BMVC 2021<br/>
