--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@ BODY {
 <h2><strong>Publications</strong></h2>
 <!-- <div style="border:1px solid #CCC"></div> -->
 
-<table border="0" cellspacing="8" cellpadding="8" font-size: 15px>
+<table border="0" cellspacing="2" cellpadding="6" font-size: 15px>
   <tr>
-    <td width="180" align="right"><img width="180" src="assets/paper/abpn_cvpr_2022/teaser.png" border="0"></td>
+    <!-- <td width="180" align="right"><img width="180" src="assets/paper/abpn_cvpr_2022/teaser.png" border="0"></td> -->
     <td>
     <div class="title"><strong>ABPN: Adaptive Blend Pyramid Network for Real-Time Local Retouching of Ultra High-Resolution Photo</strong></div>
     <div class="authors">
@@ -76,7 +76,7 @@ BODY {
   </tr> 
 
   <tr>
-    <td width="180" align="right"><img width="180" src="assets/paper/ctsdg_iccv_2021/teaser.png" border="0"></td>
+    <!-- <td width="180" align="right"><img width="180" src="assets/paper/ctsdg_iccv_2021/teaser.png" border="0"></td> -->
     <td>
     <div class="title"><strong>Image Inpainting via Conditional Texture and Structure Dual Generation</strong></div>
     <div class="authors">
@@ -96,7 +96,7 @@ BODY {
 <h2><strong>Professional activities</strong></h2>
 <!-- <div style="border:1px solid #CCC"></div> -->
 
-<table border="0" cellspacing="8" cellpadding="8" font-size: 15px>
+<table border="0" cellspacing="2" cellpadding="6" font-size: 15px>
   <tr>
     <td>
     <div class="reviewer"><strong>Conference Reviewer:</strong> CVPR 2023, ECCV 2022, ACM MM 2022, BMVC 2021<br/>
@@ -105,7 +105,7 @@ BODY {
   </tr>  
 </table>
 
-<br><br><br>
+<br>
 
 </div>
 </body></html>
