--- a/index.html
+++ b/index.html
@@ -52,8 +52,22 @@ BODY {
 <div id="primarycontent">
 <!-- <center><h1><strong>Xiefan Guo</strong></h1></center> -->
 
-<br/>
-<br/><br/>
+<table border="0" cellspacing="0" cellpadding="0" font-size: 15px>
+  <tr>
+    <!-- <td width="180" align="right"><img width="180" src="assets/paper/abpn_cvpr_2022/teaser.png" border="0"></td> -->
+    <td width="75%">
+    <div class="name"><h1><strong>Xiefan Guo</strong></h1></div>
+    <!-- <div class="institution">Beihang University</div> -->
+    <!-- <div class="">&nbsp</div> -->
+    <div>
+        <span> <a href="mailto:xfguo@buaa.edu.cn"><strong>Email</strong></a> </span> |
+        <span> <a href="https://scholar.google.com/citations?user=X4MKw-wAAAAJ&hl=zh-CN&oi=ao"><strong>Google Scholar</strong></a> </span> |
+        <span> <a href="https://github.com/Xiefan-Guo"><strong>Github</strong></a> </span>
+    </div>
+    </td>
+    <td width="25%"><img width="200" src="assets/portrait.jpg" border="1"></td>
+  </tr> 
+</table>
 
 
 <h2><strong>Publications</strong></h2>
