--- a/index.html
+++ b/index.html
@@ -60,15 +60,17 @@ BODY {
     <!-- <div class="institution">Beihang University</div> -->
     <!-- <div class="">&nbsp</div> -->
     <div>
-        <span> <a href="mailto:xfguo@buaa.edu.cn"><strong>Email</strong></a> </span> |
-        <span> <a href="https://scholar.google.com/citations?user=X4MKw-wAAAAJ&hl=zh-CN&oi=ao"><strong>Google Scholar</strong></a> </span> |
-        <span> <a href="https://github.com/Xiefan-Guo"><strong>Github</strong></a> </span>
+        <span> <a href="mailto:xfguo@buaa.edu.cn">Email</a> </span> |
+        <span> <a href="https://scholar.google.com/citations?user=X4MKw-wAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a> </span> |
+        <span> <a href="https://github.com/Xiefan-Guo">Github</a> </span>
     </div>
     </td>
-    <td width="25%"><img width="200" src="assets/portrait.jpg" border="1"></td>
+    <!-- <td width="25%"><img width="200" src="assets/portrait.jpg" border="1"></td> -->
   </tr> 
 </table>
 
+
+<br/>
 
 <h2><strong>Publications</strong></h2>
 <!-- <div style="border:1px solid #CCC"></div> -->
