--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ BODY {
   <tr>
     <td>
     <div class="reviewer"><strong>Conference Reviewer:</strong> CVPR 2023, ECCV 2022, ACM MM 2022, BMVC 2021<br/>
-      <strong>Journal Reviewer:</strong> IEEE-TCSVT, IEEE-TMM</div>
+      <strong>Journal Reviewer:</strong> IEEE-TPAMI, IEEE-TCSVT, IEEE-TMM</div>
     </td>
   </tr>  
 </table>
